custom-manifests/mta-drive/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drive
  namespace: drive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drive
  template:
    metadata:
      labels:
        app: drive
    spec:
      containers:
        - name: drive
          image: sousekmta/mta-drive:v1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: drive
  namespace: drive
spec:
  selector:
    app: drive
  ports:
    - port: 3000
      targetPort: 3000
