custom-manifests/mta-drive/mta-drive-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drive
  namespace: drive
spec:
  ingressClassName: traefik
  rules:
    - host: drive.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drive
                port:
                  number: 3000
